--- a/index.html
+++ b/index.html
@@ -4,9 +4,90 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+    <!-- Font awesome -->
+    <script src="https://kit.fontawesome.com/6b24b224bc.js" crossorigin="anonymous"></script>
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap-theme.min.css" integrity="sha384-6pzBo3FDv/PJ8r2KRkGHifhEocL+1X2rVCTTkUfGk7/0pbek5mMa1upzvWbrUbOZ" crossorigin="anonymous">
+
+    <!-- My css-->
+    <link rel="stylesheet" href="style.css">
+
+    <title>Xhino Mullaymeri</title>
 </head>
 <body>
-    <h1> Hello Xhino! </h1>
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+          <!-- Brand and toggle get grouped for better mobile display -->
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+                <a class="navbar-brand" href="#">
+                    <img src="images/coder.svg" width="30" height="30" class="d-inline-block align-top" alt="">
+                    Xhino Mullaymeri
+                </a>
+          </div>
+      
+          <!-- Collect the nav links, forms, and other content for toggling -->
+          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav navbar-right">
+              <li><a href="#">CV</a></li>
+              <li><a href="#">Projects</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Contact</a></li>
+            </ul>
+          </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
+      </nav>
+
+    <section id="Top">
+      <h2></h2>
+
+      <div class="container d-flex align-items-center justify-content-center">
+        <div class="container text-center">
+            <h1> Hey <span class="name"> Xhino </span> here!!</h1>
+
+            <div class="social-icons">
+              <a class="github" href="https://github.com/XhinoMullaymeri">
+                <i class="fa-brands fa-github"></i>
+              </a>
+              <a class="email" href="mailto:xhinodev@gmail.com">
+                <i class="fa-solid fa-envelope"></i>
+              </a>
+              <a class="linkedin" href="https://www.linkedin.com/in/xhino-mullaymeri/">
+                <i class="fa-brands fa-linkedin"></i>
+              </a>
+            </div>
+        </div>
+      </div>
+
+
+
+    </section>
+
+   
+    <section id="CV" class="CV">
+      <h2>CV</h2>
+    </section>
+
+    <section id="Projects" class="Projects">
+      <h2>Projects</h2>
+    </section>
+
+    <section id="Blog" class="Blog">
+      <h2>Blog</h2>
+    </section>
+
+    <section id="Contact" class="Contact">
+      <h2>Contact</h2>
+    </section>
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
 </body>
 </html>
