--- a/index.html
+++ b/index.html
@@ -5,8 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="basic.css">
 </head>
 <body>
-    <h1> Hello Xhino! </h1>
+  <div id=container>
+    <div id=content>
+      <h1> Website in progress ...</h1>
+
+      <figure class="swing">
+        <img src="images\work_in_progress.png" alt="">
+      </figure>  
+
+  </div>
 </body>
 </html>
